Linux Device Driver How to know current process whether it is running in container or not.

--- a/driver.htm
+++ b/driver.htm
@@ -343,6 +343,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 如何產生全部選項為no的.config檔案</a><br>
 
 &lowast;
+<a href="driver/ldd/pid_ns.htm">
+如何知道目前process是否位於container裡面</a><br>
+
+&lowast;
 <a href="driver/ldd/fix_this_module.htm">
 解決"module_put"問題</a><br>
 
