CASIO EX-word DATAPLUS 4 XD-SP4850 Added teardown images.

--- a/umpc/xd-sp4850/teardown.htm
+++ b/umpc/xd-sp4850/teardown.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>CASIO EX-word DATAPLUS 4 XD-SP4800</h3>
+<h3>CASIO EX-word DATAPLUS 4 XD-SP4850</h3>
 <p><b>拆機</b></p>
 <hr size="1">
 <p>
@@ -69,7 +69,7 @@
 背面<br>
 <img src="teardown/7.jpg" class="maxSize"><br><br>
 
-AAA x 2<br>
+電池槽<br>
 <img src="teardown/8.jpg" class="maxSize"><br><br>
 
 鍵盤<br>
@@ -94,7 +94,10 @@ AK4634、K9G8G08U0M、S99-50051<br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
 
 屏<br>
-<img src="teardown/18.jpg" class="maxSize">
+<img src="teardown/18.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/19.jpg" class="maxSize">
 </p>
 
 <p>
