--- a/umpc.htm
+++ b/umpc.htm
@@ -126,6 +126,7 @@
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#xd-b6500"><img src="img/photos/xd-b6500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B6500"/></a>
   <a href="#xd-u9800"><img src="img/photos/xd-u9800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 8 XD-U9800"/></a>
+  <a href="#xd-k4700"><img src="img/photos/xd-k4700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 9 XD-K4700"/></a>
   <a href="#xd-z4700"><img src="img/photos/xd-z4700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 10 XD-Z4700"/></a>
   <a href="#cd-55"><img src="img/photos/cd-55.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-55"/></a>
   <a href="#cd-85"><img src="img/photos/cd-85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="BESTA CD-85"/></a>
@@ -1205,6 +1206,16 @@ CASIO EX-word DATAPLUS 8 XD-U9800</h3>
 
 &lowast;
 <a href="umpc/xd-u9800/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-k4700"></div>
+<h3><img src="img/photos/xd-k4700.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 9 XD-K4700</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-k4700/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
