CASIO EX-word DATAPLUS 5 XD-A8600 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -122,6 +122,7 @@
   <a href="#xd-sp4850"><img src="img/photos/xd-sp4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SP4850"/></a>
   <a href="#xd-sp6600"><img src="img/photos/xd-sp6600.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SP6600"/></a>
   <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
+  <a href="#xd-a8600"><img src="img/photos/xd-a8600.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A8600"/></a>
   <a href="#xd-b4700"><img src="img/photos/xd-b4700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4700"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#xd-b6500"><img src="img/photos/xd-b6500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B6500"/></a>
@@ -1166,6 +1167,16 @@ CASIO EX-word DATAPLUS 5 XD-A4800</h3>
 
 &lowast;
 <a href="umpc/xd-a4800/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-a8600"></div>
+<h3><img src="img/photos/xd-a8600.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 5 XD-A8600</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-a8600/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
