--- a/umpc.htm
+++ b/umpc.htm
@@ -115,6 +115,7 @@
   <a href="#xd-lp9300"><img src="img/photos/xd-lp9300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-LP9300"/></a>
   <a href="#xd-st4800"><img src="img/photos/xd-st4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 2 XD-ST4800"/></a>
   <a href="#xd-sw4800"><img src="img/photos/xd-sw4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 3 XD-SW4800"/></a>
+  <a href="#xd-gf6500"><img src="img/photos/xd-gf6500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-GF6500"/></a>
   <a href="#xd-sf6200"><img src="img/photos/xd-sf6200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6200"/></a>
   <a href="#xd-sf6300"><img src="img/photos/xd-sf6300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6300"/></a>
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
@@ -1097,6 +1098,16 @@ CASIO EX-word DATAPLUS 3 XD-SW4800</h3>
 
 &lowast;
 <a href="umpc/xd-sw4800/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-gf6500"></div>
+<h3><img src="img/photos/xd-gf6500.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 4 XD-GF6500</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-gf6500/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
