--- a/umpc.htm
+++ b/umpc.htm
@@ -100,6 +100,7 @@
   <a href="#pw-ac110"><img src="img/photos/pw-ac110.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC110"/></a>
   <a href="#pw-ac880"><img src="img/photos/pw-ac880.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-AC880"/></a>
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
+  <a href="#pw-a7300"><img src="img/photos/pw-a7300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-A7300"/></a>
   <a href="#pw-sh5"><img src="img/photos/pw-sh5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH5"/></a>
   <a href="#sr-g8100"><img src="img/photos/sr-g8100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR-G8100"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
@@ -949,6 +950,16 @@ SHARP Brain PW-GC590</h3>
 
 &lowast;
 <a href="umpc/pw-gc590/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-a7300"></div>
+<h3><img src="img/photos/pw-a7300.jpg" class="floatLeft"/>
+SHARP Brain PW-A7300</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-a7300/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
