SHARP Brain PW-A7300 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -959,6 +959,10 @@ SHARP Brain PW-A7300</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-a7300/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-a7300/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
