--- a/umpc.htm
+++ b/umpc.htm
@@ -965,6 +965,13 @@ SHARP Brain PW-A7300</h3>
 &lowast;
 <a href="umpc/pw-a7300/teardown.htm">
 拆機</a><br>
+
+&oplus;
+<b>Brainux</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-a7300/brainux_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
