SHARP Brain PW-A7300 How to build linux kernel from source.

--- a/umpc.htm
+++ b/umpc.htm
@@ -972,6 +972,10 @@ SHARP Brain PW-A7300</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-a7300/brainux_setup.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-a7300/brainux_build_kernel.htm">
+  build kernel</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
