SHARP Brain PW-A7300 How to adjust backlight brightness via dtbs.

--- a/umpc.htm
+++ b/umpc.htm
@@ -976,6 +976,10 @@ SHARP Brain PW-A7300</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-a7300/brainux_build_kernel.htm">
   build kernel</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-a7300/brainux_brightness.htm">
+  調整預設背光亮度</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
