SHARP Brain PW-SH3 Updated images.

--- a/umpc/pw-sh3/brainux_setup.htm
+++ b/umpc/pw-sh3/brainux_setup.htm
@@ -77,17 +77,19 @@ root@debian:/# passwd user
 </pre><br>
 
 <p>
-開機進入官方系統後，選擇最下方的的說明<br>
+開機進入官方系統後，選擇最下方的棕色圖案<br>
 <img src="brainux_setup/1.jpg" class="maxSize"><br><br>
 
-選擇最上方的動畫<br>
+選擇右上方的追加<br>
 <img src="brainux_setup/2.jpg" class="maxSize"><br><br>
 
-Launch Linux<br>
+選擇追加動畫<br>
 <img src="brainux_setup/3.jpg" class="maxSize"><br><br>
 
+Launch Linux<br>
+<img src="brainux_setup/4.jpg" class="maxSize"><br><br>
+
 啟動Linux<br>
-<img src="brainux_setup/4.jpg" class="maxSize"><br>
 <img src="brainux_setup/5.jpg" class="maxSize"><br><br>
 
 進入桌面<br>
