SHARP Brain PW-SH3 How to build kernel and adjust backlight in dtbs.

--- a/umpc.htm
+++ b/umpc.htm
@@ -994,6 +994,14 @@ SHARP Brain PW-SH3</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-sh3/brainux_setup.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-a7300/brainux_build_kernel.htm">
+  build kernel</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-sh3/brainux_brightness.htm">
+  調整預設背光亮度</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
