SHARP Brain PW-SH3 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -988,6 +988,10 @@ SHARP Brain PW-A7300</h3>
 SHARP Brain PW-SH3</h3>
 <hr size="1"><br><br><br><br><br>
 
+&lowast;
+<a href="umpc/pw-sh3/review.htm">
+介紹</a><br>
+
 &oplus;
 <b>Brainux</b><br>
 
