SHARP Brain PW-SH5 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1014,6 +1014,10 @@ SHARP Brain PW-SH5</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-sh5/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-sh5/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
