--- a/umpc.htm
+++ b/umpc.htm
@@ -975,6 +975,10 @@ SHARP Brain PW-A7300</h3>
   安裝系統</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="umpc/pw-sh3/brainux_keymap.htm">
+  對應按鍵</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="umpc/pw-a7300/brainux_build_kernel.htm">
   build kernel</a><br>
   
@@ -998,6 +1002,10 @@ SHARP Brain PW-SH3</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-sh3/brainux_setup.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-sh3/brainux_keymap.htm">
+  對應按鍵</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-a7300/brainux_build_kernel.htm">
