SHARP Brain PW-SH3 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -996,6 +996,10 @@ SHARP Brain PW-SH3</h3>
 <a href="umpc/pw-sh3/review.htm">
 介紹</a><br>
 
+&lowast;
+<a href="umpc/pw-sh3/teardown.htm">
+拆機</a><br>
+
 &oplus;
 <b>Brainux</b><br>
 
