--- a/umpc/pw-sh3/teardown.htm
+++ b/umpc/pw-sh3/teardown.htm
@@ -45,22 +45,87 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>SHARP Brain PW-SH3</h3>
-<p><b>介紹</b></p>
+<p><b>拆機</b></p>
 <hr size="1">
 <p>
-簡要規格
+正面<br>
+<img src="teardown/1.jpg" class="maxSize"><br><br>
+
+下邊<br>
+<img src="teardown/2.jpg" class="maxSize"><br><br>
+
+側邊<br>
+<img src="teardown/3.jpg" class="maxSize"><br><br>
+
+上邊<br>
+<img src="teardown/4.jpg" class="maxSize"><br><br>
+
+側邊<br>
+<img src="teardown/5.jpg" class="maxSize"><br><br>
+
+展開<br>
+<img src="teardown/6.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="teardown/7.jpg" class="maxSize"><br><br>
+
+外殼只有這兩顆螺絲<br>
+<img src="teardown/8.jpg" class="maxSize"><br><br>
+
+拆開後<br>
+<img src="teardown/9.jpg" class="maxSize"><br><br>
+
+背蓋<br>
+<img src="teardown/10.jpg" class="maxSize"><br><br>
+
+3.7v 1770mA<br>
+<img src="teardown/11.jpg" class="maxSize"><br><br>
+
+中框<br>
+<img src="teardown/12.jpg" class="maxSize"><br><br>
+
+PCB<br>
+<img src="teardown/13.jpg" class="maxSize"><br><br>
+
+主板<br>
+<img src="teardown/14.jpg" class="maxSize"><br>
+<img src="teardown/28.jpg" class="maxSize"><br><br>
+
+FT24C32A<br>
+<img src="teardown/15.jpg" class="maxSize"><br><br>
+
+BU26154<br>
+<img src="teardown/16.jpg" class="maxSize"><br><br>
+
+MCIMX283DVM4B<br>
+<img src="teardown/17.jpg" class="maxSize"><br><br>
+
+KLM8G1WEPD-B031、6AB17 D9LRG(Micron MT46H64M16LFBF-5)<br>
+<img src="teardown/18.jpg" class="maxSize"><br><br>
+
+6041 6F57<br>
+<img src="teardown/19.jpg" class="maxSize"><br><br>
+
+PCB<br>
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+鍵盤<br>
+<img src="teardown/21.jpg" class="maxSize"><br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
+
+喇叭<br>
+<img src="teardown/24.jpg" class="maxSize"><br>
+<img src="teardown/25.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="teardown/26.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/27.jpg" class="maxSize">
 </p>
-<table>
-  <tr><th>CPU</th><td>NXP i.MX283 ARM926EJ-S 454MHz</td></tr>
-  <tr><th>RAM</th><td>128MB</td></tr>
-  <tr><th>Flash</th><td>8GB</td></tr>
-  <tr><th>Screen</th><td>5.5" 854x480 電阻觸控</td></tr>
-  <tr><th>Slot</th><td>MicroSD</td></tr>
-  <tr><th>Keyboard</th><td>QWERTY</td></tr>
-  <tr><th>Battery</th><td>3.7v 1770mA</td></tr>
-  <tr><th>Dimension</th><td>152mm x 97mm x 19mm</td></tr>
-  <tr><th>Weight</th><td>300g</td></tr>
-</table><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
