SHARP Brain PW-SH3 List all of brain models.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1000,6 +1000,10 @@ SHARP Brain PW-SH3</h3>
 <a href="umpc/pw-sh3/teardown.htm">
 拆機</a><br>
 
+&lowast;
+<a href="umpc/pw-sh3/brain_model.htm">
+Brain機型</a><br>
+
 &oplus;
 <b>Brainux</b><br>
 
