SHARP Brain PW-SH3 Appended spec.

--- a/umpc/pw-sh3/brain_model.htm
+++ b/umpc/pw-sh3/brain_model.htm
@@ -52,8 +52,37 @@
 1. <a href="https://brain.fandom.com/ja/wiki/Brain%E6%A9%9F%E7%A8%AE%E5%88%A5%E8%A7%A3%E8%AA%AC">brain model</a><br><br>
 
 如下：<br>
-<img src="brain_model/1.jpg" class="maxSize">
+<img src="brain_model/1.jpg" class="maxSize"><br><br>
+
+規格：
 </p>
+<table>
+<tr><th colspan=2>第1世代</th></tr>
+<tr><td>CPU</td><td>TMPA910CRAXBG ARM926EJ-S (Armv5TEJ)</td></tr>
+<tr><td>RAM</td><td>64MB</td></tr>
+<tr><td>Touch</td><td>4182A</td></tr>
+<tr><td>Main Screen</td><td>5.0" 480×320</td></tr>
+<tr><td>Sub Screen</td><td>128x98</td></tr>
+<tr><th colspan=2>第2世代</th></tr>
+<tr><td>CPU</td><td>Freescale i.MX28 ARM926EJ-S (Armv5TEJ)</td></tr>
+<tr><td>RAM</td><td>128MB</td></tr>
+<tr><td>Touch</td><td>SX8650</td></tr>
+<tr><td>Main Screen</td><td>5.0" 480×320</td></tr>
+<tr><td>Sub Screen</td><td>240x120</td></tr>
+<tr><th colspan=2>第3世代</th></tr>
+<tr><td>CPU</td><td>Freescale i.MX28 ARM926EJ-S (Armv5TEJ)</td></tr>
+<tr><td>RAM</td><td>128MB</td></tr>
+<tr><td>Screen</td><td>5.2" ~ 5.5" 854x480</td></tr>
+<tr><th colspan=2>第4世代</th></tr>
+<tr><td>CPU</td><td>Freescale i.MX28 ARM926EJ-S (Armv5TEJ)</td></tr>
+<tr><td>RAM</td><td>128MB</td></tr>
+<tr><td>Screen</td><td>5.2" ~ 5.5" 854x480</td></tr>
+<tr><th colspan=2>第5世代</th></tr>
+<tr><td>CPU</td><td>NXP i.MX 7 ULP Cortex-A7@720 MHz (Armv7-A) + Cortex-M4@200 MHz (Armv7E-M)</td></tr>
+<tr><td>GPU</td><td>Vivante GC7000</td></tr>
+<tr><td>RAM</td><td>128MB (LPDDR2 400MHz)</td></tr>
+<tr><td>Screen</td><td>5.2" ~ 5.5" 854x480</td></tr>
+</table><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
