MT7688 Updated pcb image.

--- a/mcu/rm08s/pcb.htm
+++ b/mcu/rm08s/pcb.htm
@@ -58,7 +58,10 @@ HLK-RM08S核心板的正面<br>
 <img src="pcb/3.jpg" class="maxSize"><br><br>
 
 使用AMS1117將5V轉成3.3V<br>
-<img src="pcb/4.jpg" class="maxSize">
+<img src="pcb/4.jpg" class="maxSize"><br><br>
+
+為了方便燒錄，司徒最後決定跳接到燒錄器上面<br>
+<img src="pcb/5.jpg" class="maxSize">
 </p>
 
 <p>
