(MIPS 24KEc) MT7688 (HLK-RM08S) Used full title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -136,7 +136,7 @@
   <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331"/></a>
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
-  <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
+  <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
   <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
   <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906"/></a>
@@ -3040,7 +3040,7 @@ Branch、Jump指令的差異</a><br>
 
 <div id="rm08s"></div>
 <h3><img src="img/photos/rm08s.jpg" class="floatLeft"/>
-<b>(MIPS 24KEc)</b> MT7688</h3>
+<b>(MIPS 24KEc)</b> MT7688 (HLK-RM08S)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
