--- a/mcu/rm08s/pinout.htm
+++ b/mcu/rm08s/pinout.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MT7688</h3>
+<h3>(MIPS 24KEc) MT7688 (HLK-RM08S)</h3>
 <p><b>腳位</b></p>
 <hr size="1">
 <p>
