(MIPS II) M200 (Newton1) Used full title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -132,7 +132,7 @@
   <a href="#pi-3"><img src="img/photos/pi-3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) BCM2837"/></a>
   <a href="#rk3328-cc"><img src="img/photos/rk3328-cc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) RK3328"/></a>
   <a href="#mips"><img src="img/photos/mips.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MIPS"/></a>
-  <a href="#newton"><img src="img/photos/newton.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS II) M200"/></a>
+  <a href="#newton"><img src="img/photos/newton.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS II) M200 (Newton1)"/></a>
   <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331"/></a>
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
@@ -2847,7 +2847,7 @@ OPCode<br>
 
 <div id="newton"></div>
 <h3><img src="img/photos/newton.jpg" class="floatLeft"/>
-<b>(MIPS II)</b> M200</h3>
+<b>(MIPS II)</b> M200 (Newton1)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
