--- a/mcu/m200/build_uboot.htm
+++ b/mcu/m200/build_uboot.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>M200</h3>
+<h3>(MIPS II) M200 (Newton1)</h3>
 <p><b>Build UBoot</b></p>
 <hr size="1">
 <p>
