(MIPS 24Kc) AR9331 (JS9331) Used full title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -133,7 +133,7 @@
   <a href="#rk3328-cc"><img src="img/photos/rk3328-cc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) RK3328"/></a>
   <a href="#mips"><img src="img/photos/mips.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MIPS"/></a>
   <a href="#newton"><img src="img/photos/newton.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS II) M200 (Newton1)"/></a>
-  <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331"/></a>
+  <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331 (JS9331)"/></a>
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
@@ -2873,7 +2873,7 @@ Build Kernel</a><br>
 
 <div id="js9331"></div>
 <h3><img src="img/photos/js9331.jpg" class="floatLeft"/>
-<b>(MIPS 24Kc)</b> AR9331</h3>
+<b>(MIPS 24Kc)</b> AR9331 (JS9331)</h3>
 <hr size="1"><br><br><br><br><br>
 &lowast;
 <a href="mcu/ar9331/pinout.htm">
