--- a/mcu/ar9331/pinout.htm
+++ b/mcu/ar9331/pinout.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>AR9331</h3>
+<h3>(MIPS 24Kc) AR9331 (JS9331)</h3>
 <p><b>腳位</b></p>
 <hr size="1">
 <p>
