--- a/mcu/mt7688/asm_led.htm
+++ b/mcu/mt7688/asm_led.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MT7688 &gt;&gt; Assembly</h3>
+<h3>(MIPS 24KEc) MT7688 (LinkIt Smart 7688) &gt;&gt; Assembly</h3>
 <p><b>LED</b></p>
 <hr size="1">
 <p>
