--- a/mcu/mt7688/pcb.htm
+++ b/mcu/mt7688/pcb.htm
@@ -44,11 +44,11 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MT7688</h3>
+<h3>(MIPS 24KEc) MT7688 (LinkIt Smart 7688)</h3>
 <p><b>開發板</b></p>
 <hr size="1">
 <p>
-Linkit Smart 7688 Duo<br>
+LinkIt Smart 7688<br>
 <img src="pcb/1.jpg" class="maxSize"><br><br>
 
 背面<br>
