(MIPS 24KEc) MT7688 (LinkIt Smart 7688 Duo) Used full title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -135,7 +135,7 @@
   <a href="#newton"><img src="img/photos/newton.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS II) M200 (Newton1)"/></a>
   <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331 (JS9331)"/></a>
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (LinkIt Smart 7688)"/></a>
-  <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
+  <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (LinkIt Smart 7688 Duo)"/></a>
   <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
   <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
@@ -2967,7 +2967,7 @@ Build Kernel 3.18.44</a><br>
 
 <div id="smart_mt7688-duo"></div>
 <h3><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft"/>
-<b>(MIPS 24KEc)</b> MT7688</h3>
+<b>(MIPS 24KEc)</b> MT7688 (LinkIt Smart 7688 Duo)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
