--- a/mcu.htm
+++ b/mcu.htm
@@ -137,7 +137,7 @@
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (LinkIt Smart 7688)"/></a>
   <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (LinkIt Smart 7688 Duo)"/></a>
   <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
-  <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795"/></a>
+  <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795 (UBW32)"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
   <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906"/></a>
   <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133"/></a>
@@ -3054,7 +3054,7 @@ Branch、Jump指令的差異</a><br>
 
 <div id="ubw32"></div>
 <h3><img src="img/photos/ubw32.jpg" class="floatLeft"/>
-<b>(MIPS M4K)</b> PIC32MX795</h3>
+<b>(MIPS M4K)</b> PIC32MX795 (UBW32)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
