--- a/mcu.htm
+++ b/mcu.htm
@@ -139,8 +139,8 @@
   <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
   <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795 (UBW32)"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
-  <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906"/></a>
-  <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133"/></a>
+  <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
+  <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
   <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103"/></a>
   <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210"/></a>
   <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
@@ -3089,7 +3089,7 @@ Register</a><br>
 
 <div id="d1-h"></div>
 <h3><img src="img/photos/d1-h.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> C906</h3>
+<b>(RISC-V)</b> C906 (哪吒)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -3099,7 +3099,7 @@ Register</a><br>
 
 <div id="f133"></div>
 <h3><img src="img/photos/f133.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> F133-A</h3>
+<b>(RISC-V)</b> F133-A (MangoPi MQ-R)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
