--- a/mcu.htm
+++ b/mcu.htm
@@ -141,7 +141,7 @@
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
   <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
   <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
-  <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103"/></a>
+  <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
   <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210"/></a>
   <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
   <a href="#d2000"><img src="img/photos/d2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(Intel Quark) D2000"/></a>
@@ -3109,7 +3109,7 @@ Register</a><br>
 
 <div id="gd32vf103"></div>
 <h3><img src="img/photos/gd32vf103.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> GD32VF103</h3>
+<b>(RISC-V)</b> GD32VF103 (Sipeed Longan Nano)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
