--- a/mcu/gd32vf103/sch.htm
+++ b/mcu/gd32vf103/sch.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GD32VF103</h3>
+<h3>(RISC-V) GD32VF103 (Sipeed Longan Nano)</h3>
 <p><b>電路圖</b></p>
 <hr size="1">
 <p>
