--- a/mcu/k210/build_standalone_sdk.htm
+++ b/mcu/k210/build_standalone_sdk.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>K210</h3>
+<h3>(RISC-V IMAFDC) K210 (Sipeed Maix Bit)</h3>
 <p><b>Build Kendryte Standalone SDK</b></p>
 <hr size="1">
 <p>
