(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) Added pcb image.

--- a/mcu/t113-s3/pcb.htm
+++ b/mcu/t113-s3/pcb.htm
@@ -45,16 +45,12 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>(ARM Cortex-A7) T113-S3 (MangoPi MQ-R)</h3>
-<p><b>電路圖</b></p>
+<p><b>開發板</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://mangopi.org/_media/mq-dual_sch_v1.6.pdf">schematic</a><br><br>
-
-如下：<br>
-<img src="sch/1.jpg" class="maxSize"><br>
-<img src="sch/2.jpg" class="maxSize"><br>
-<img src="sch/3.jpg" class="maxSize">
+芒果派MQ-R開發板上，已經有LED和按鍵，因此，不需要額外焊接就可以拿來開發測試<br>
+<img src="pcb/1.jpg" class="maxSize"><br>
+<img src="pcb/2.jpg" class="maxSize">
 </p>
 
 <p>
