(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) Added pcb image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -121,7 +121,7 @@
   <a href="#teensy-4.0"><img src="img/photos/teensy-4.0.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-M7) RT1062"/></a>
   <a href="#2g-iot"><img src="img/photos/2g-iot.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A5) RDA8810PL"/></a>
   <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3"/></a>
-  <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S"/></a>
+  <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (MangoPi MQ-R)"/></a>
   <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
   <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
   <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
@@ -2483,8 +2483,16 @@ pinout(dip switch)</a><br>
 
 <div id="t113-s3"></div>
 <h3><img src="img/photos/t113-s3.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> T113-S3</h3>
+<b>(ARM Cortex-A7)</b> T113-S3 (MangoPi MQ-R)</h3>
 <hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/t113-s3/pcb.htm">
+開發板</a><br>
+
+&lowast;
+<a href="mcu/lpc2103/int.htm">
+中斷表</a><br>
 
 &lowast;
 <a href="mcu/t113-s3/sch.htm">
