(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) How to prepare developing environment.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2497,6 +2497,13 @@ pinout(dip switch)</a><br>
 &lowast;
 <a href="mcu/t113-s3/sch.htm">
 電路圖</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/t113-s3/asm_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="lichee-zero"></div>
