(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) An example to show how to blink LED in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2498,12 +2498,20 @@ pinout(dip switch)</a><br>
 <a href="mcu/t113-s3/sch.htm">
 電路圖</a><br>
 
+&lowast;
+<a href="handheld/miyoo/mksunxi.htm">
+mksunxi.c</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
   &emsp;&emsp;&lowast;
   <a href="mcu/t113-s3/asm_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/t113-s3/asm_led.htm">
+  LED</a><br>
 <br><br><br><br>
 
 <div id="lichee-zero"></div>
