(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) An example to show how to get input value from button in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2512,6 +2512,10 @@ mksunxi.c</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/t113-s3/asm_led.htm">
   LED</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/t113-s3/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="lichee-zero"></div>
