(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) Added block diagram.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2499,6 +2499,10 @@ pinout(dip switch)</a><br>
 電路圖</a><br>
 
 &lowast;
+<a href="mcu/t113-s3/block.htm">
+方塊圖</a><br>
+
+&lowast;
 <a href="handheld/miyoo/mksunxi.htm">
 mksunxi.c</a><br>
 
