(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) Added pinout.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2487,6 +2487,10 @@ pinout(dip switch)</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/t113-s3/pinout.htm">
+腳位</a><br>
+
+&lowast;
 <a href="mcu/t113-s3/pcb.htm">
 開發板</a><br>
 
