--- a/umpc.htm
+++ b/umpc.htm
@@ -109,6 +109,7 @@
   <a href="#v80"><img src="img/photos/v80.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V80"/></a>
   <a href="#v300"><img src="img/photos/v300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V300"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
+  <a href="#z900"><img src="img/photos/z900.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank Z900"/></a>
   <a href="#fx-39"><img src="img/photos/fx-39.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO fx-39"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f4100"><img src="img/photos/xd-f4100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F4100"/></a>
@@ -1095,6 +1096,16 @@ Canon wordtank V903</h3>
 
 &lowast;
 <a href="umpc/v903/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="z900"></div>
+<h3><img src="img/photos/z900.jpg" class="floatLeft"/>
+Canon wordtank Z900</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/z900/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
