SHARP Brain PW-SH4 How to install brainux system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -102,6 +102,7 @@
   <a href="#pw-gc590"><img src="img/photos/pw-gc590.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-GC590"/></a>
   <a href="#pw-a7300"><img src="img/photos/pw-a7300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-A7300"/></a>
   <a href="#pw-sh3"><img src="img/photos/pw-sh3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH3"/></a>
+  <a href="#pw-sh4"><img src="img/photos/pw-sh4.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH4"/></a>
   <a href="#pw-sh5"><img src="img/photos/pw-sh5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Brain PW-SH5"/></a>
   <a href="#sr-g8100"><img src="img/photos/sr-g8100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR-G8100"/></a>
   <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
@@ -1023,6 +1024,19 @@ Brain機型</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-sh3/brainux_brightness.htm">
   調整預設背光亮度</a><br>
+<br><br><br><br>
+
+<div id="pw-sh4"></div>
+<h3><img src="img/photos/pw-sh4.jpg" class="floatLeft"/>
+SHARP Brain PW-SH4</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Brainux</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-sh4/brainux_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
