Canon wordtank Z900 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1119,6 +1119,10 @@ Canon wordtank Z900</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/z900/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/z900/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
