SHARP Brain PW-SH4 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1031,6 +1031,10 @@ Brain機型</a><br>
 SHARP Brain PW-SH4</h3>
 <hr size="1"><br><br><br><br><br>
 
+&lowast;
+<a href="umpc/pw-sh4/review.htm">
+介紹</a><br>
+
 &oplus;
 <b>Brainux</b><br>
 
