SHARP Brain PW-SH4 Added some links.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1041,6 +1041,14 @@ SHARP Brain PW-SH4</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/pw-sh4/brainux_setup.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-sh3/brainux_keymap.htm">
+  對應按鍵</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/pw-a7300/brainux_build_kernel.htm">
+  build kernel</a><br>
 <br><br><br><br>
 
 <div id="pw-sh5"></div>
