SHARP Brain PW-SH4 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1035,6 +1035,10 @@ SHARP Brain PW-SH4</h3>
 <a href="umpc/pw-sh4/review.htm">
 介紹</a><br>
 
+&lowast;
+<a href="umpc/pw-sh4/teardown.htm">
+拆機</a><br>
+
 &oplus;
 <b>Brainux</b><br>
 
