SHARP Brain PW-SH4 Added teardown images.

--- a/umpc/pw-sh4/teardown.htm
+++ b/umpc/pw-sh4/teardown.htm
@@ -116,7 +116,21 @@ PCB<br>
 <img src="teardown/25.jpg" class="maxSize"><br><br>
 
 FPC<br>
-<img src="teardown/26.jpg" class="maxSize">
+<img src="teardown/26.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="teardown/27.jpg" class="maxSize"><br><br>
+
+鐵框<br>
+<img src="teardown/28.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="teardown/29.jpg" class="maxSize"><br>
+<img src="teardown/30.jpg" class="maxSize"><br>
+<img src="teardown/31.jpg" class="maxSize"><br>
+<img src="teardown/32.jpg" class="maxSize"><br>
+<img src="teardown/33.jpg" class="maxSize"><br>
+<img src="teardown/34.jpg" class="maxSize">
 </p>
 
 <p>
