Canon wordtank Z900 Added i.MX283 ball map.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1141,6 +1141,10 @@ Canon wordtank Z900</h3>
 &lowast;
 <a href="umpc/z900/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="umpc/z900/ballmap.htm">
+i.MX283 Ball Map</a><br>
 <br><br><br><br>
 
 <div id="fx-39"></div>
