Canon wordtank Z900 Try to find out all of possible pinouts.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1143,6 +1143,10 @@ Canon wordtank Z900</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/z900/find_pin.htm">
+解焊元件找腳位</a><br>
+
+&lowast;
 <a href="umpc/z900/ballmap.htm">
 i.MX283 Ball Map</a><br>
 <br><br><br><br>
