SHARP Brain PW-A7300 Added teardown images.

--- a/umpc/pw-a7300/teardown.htm
+++ b/umpc/pw-a7300/teardown.htm
@@ -103,7 +103,25 @@ YMC240120-02AADFDGL<br>
 <img src="teardown/20.jpg" class="maxSize"><br><br>
 
 THGBM5G5A1JBAIR LL4609、BRF 2CK CG44、YMU818B-P 1203NANE<br>
-<img src="teardown/21.jpg" class="maxSize">
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+鐵框<br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+背光電路<br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="teardown/24.jpg" class="maxSize"><br>
+<img src="teardown/25.jpg" class="maxSize"><br><br>
+
+LQ050J1UG01<br>
+<img src="teardown/26.jpg" class="maxSize"><br>
+<img src="teardown/27.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/28.jpg" class="maxSize"><br>
+<img src="teardown/29.jpg" class="maxSize">
 </p>
 
 <p>
