(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) Added development board images.

--- a/mcu/t113-s3/pcb.htm
+++ b/mcu/t113-s3/pcb.htm
@@ -50,7 +50,10 @@
 <p>
 芒果派MQ-R開發板上，已經有LED和按鍵，因此，不需要額外焊接就可以拿來開發測試<br>
 <img src="pcb/1.jpg" class="maxSize"><br>
-<img src="pcb/2.jpg" class="maxSize">
+<img src="pcb/2.jpg" class="maxSize"><br><br>
+
+如果需要UART除錯，可以直接拉出來使用，腳位是E2、E3<br>
+<img src="pcb/3.jpg" class="maxSize">
 </p>
 
 <p>
