(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) How to build awboot.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2514,6 +2514,10 @@ pinout(dip switch)</a><br>
 <a href="handheld/miyoo/mksunxi.htm">
 mksunxi.c</a><br>
 
+&lowast;
+<a href="mcu/t113-s3/build_awboot.htm">
+build awboot</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
