(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) How to build kernel 6.0.1 from source.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2518,6 +2518,10 @@ mksunxi.c</a><br>
 <a href="mcu/t113-s3/build_awboot.htm">
 build awboot</a><br>
 
+&lowast;
+<a href="mcu/t113-s3/build_kernel.htm">
+build kernel 6.0.1</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
