(ARM Cortex-A7) T113-S3 (MangoPi MQ-R) How to prepare something that can be booted from MicroSD.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2519,6 +2519,10 @@ mksunxi.c</a><br>
 build awboot</a><br>
 
 &lowast;
+<a href="mcu/t113-s3/boot_from_sd.htm">
+如何從MicroSD啟動</a><br>
+
+&lowast;
 <a href="mcu/t113-s3/build_kernel.htm">
 build kernel 6.0.1</a><br>
 
