LeetCode 148. Sort List

--- a/program.htm
+++ b/program.htm
@@ -1812,6 +1812,12 @@ LeetCode</h3>
   <a href="program/leetcode/cpp_268.htm">
   268. Missing Number</a><br>
 
+&oplus;
+<b>Rust</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/rust_148.htm">
+  148. Sort List</a><br>
 <br><br><br><br>
 
 </p>
