(ARM Cortex-A7) V3S (Lichee Pi Zero) Reconstruction.

--- a/mcu.htm
+++ b/mcu.htm
@@ -120,8 +120,8 @@
   <a href="#teensy-3.2"><img src="img/photos/teensy-3.2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-M4) MK20DX256"/></a>
   <a href="#teensy-4.0"><img src="img/photos/teensy-4.0.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-M7) RT1062"/></a>
   <a href="#2g-iot"><img src="img/photos/2g-iot.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A5) RDA8810PL"/></a>
-  <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3"/></a>
-  <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (MangoPi MQ-R)"/></a>
+  <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3 (MangoPi MQ-R)"/></a>
+  <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (Lichee Pi Zero)"/></a>
   <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
   <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
   <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
@@ -2544,47 +2544,24 @@ build kernel 6.0.1</a><br>
 
 <div id="lichee-zero"></div>
 <h3><img src="img/photos/lichee-zero.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> V3S</h3>
+<b>(ARM Cortex-A7)</b> V3S (Lichee Pi Zero)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/v3s/sd_mtd.htm">
-SDCard分區</a><br>
-
-&lowast;
-<a href="mcu/v3s/spi_mtd.htm">
-SPI Flash分區</a><br>
-
-&lowast;
-<a href="mcu/v3s/flash_image_spi.htm">
-Flash Image(SPI)</a><br>
-
-&lowast;
-<a href="mcu/v3s/flash_image_sd.htm">
-Flash Image(SDCard)</a><br>
-
-&lowast;
 <a href="mcu/v3s/build_uboot.htm">
-Build UBoot</a><br>
+build uboot</a><br>
 
 &lowast;
 <a href="mcu/v3s/build_sunxi-tools.htm">
-Build sunxi-tools</a><br>
+build sunxi-tools</a><br>
 
 &lowast;
 <a href="mcu/v3s/build_kernel-4.10.15.htm">
-Build Kernel 4.10.15</a><br>
+build Kernel 4.10.15</a><br>
 
 &lowast;
 <a href="mcu/v3s/uboot_uart1.htm">
-如何將UBoot的輸出訊息轉到UART1</a><br>
-
-&oplus;
-<b>C/C++</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="mcu/v3s/led_gpio.htm">
-  LED</a><br>
+如何將uboot的輸出訊息轉到UART1</a><br>
 <br><br><br><br>
 
 <div id="a33_vstar"></div>
