--- a/mcu/v3s/uboot_uart1.htm
+++ b/mcu/v3s/uboot_uart1.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>V3S</h3>
-<p><b>如何將UBoot的輸出訊息轉到UART1</b></p>
+<h3>(ARM Cortex-A7) V3S (Lichee Pi Zero)</h3>
+<p><b>如何將uboot的輸出訊息轉到UART1</b></p>
 <hr size="1">
 <p>
 diff
