--- a/mcu/v3s/build_sunxi-tools.htm
+++ b/mcu/v3s/build_sunxi-tools.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>V3S</h3>
-<p><b>Build sunxi-tools</b></p>
+<h3>(ARM Cortex-A7) V3S (Lichee Pi Zero)</h3>
+<p><b>build sunxi-tools</b></p>
 <hr size="1">
 <p>
 步驟如下：
