(ARM Cortex-A7) V3S (Lichee Pi Zero) Added pin image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2548,6 +2548,10 @@ build kernel 6.0.1</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/v3s/pin.htm">
+接腳</a><br>
+
+&lowast;
 <a href="mcu/v3s/build_uboot.htm">
 build uboot</a><br>
 
