(ARM Cortex-A7) V3S (Lichee Pi Zero) Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2556,6 +2556,10 @@ build kernel 6.0.1</a><br>
 開發板</a><br>
 
 &lowast;
+<a href="mcu/v3s/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/v3s/build_uboot.htm">
 build uboot</a><br>
 
