(ARM Cortex-A7) V3S (Lichee Pi Zero) Added diagram block image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2560,6 +2560,10 @@ build kernel 6.0.1</a><br>
 電路圖</a><br>
 
 &lowast;
+<a href="mcu/v3s/block.htm">
+方塊圖</a><br>
+
+&lowast;
 <a href="mcu/v3s/build_uboot.htm">
 build uboot</a><br>
 
@@ -2569,7 +2573,7 @@ build sunxi-tools</a><br>
 
 &lowast;
 <a href="mcu/v3s/build_kernel-4.10.15.htm">
-build Kernel 4.10.15</a><br>
+build kernel 4.10.15</a><br>
 
 &lowast;
 <a href="mcu/v3s/uboot_uart1.htm">
