(ARM Cortex-A7) V3S (Lichee Pi Zero) How to prepare environment for development.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2564,6 +2564,10 @@ build kernel 6.0.1</a><br>
 方塊圖</a><br>
 
 &lowast;
+<a href="handheld/miyoo/mksunxi.htm">
+mksunxi.c</a><br>
+
+&lowast;
 <a href="mcu/v3s/mmap.htm">
 Memory Map</a><br>
 
@@ -2582,6 +2586,13 @@ build kernel 4.10.15</a><br>
 &lowast;
 <a href="mcu/v3s/uboot_uart1.htm">
 如何將uboot的輸出訊息轉到UART1</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/v3s/asm_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="a33_vstar"></div>
