(ARM Cortex-A7) V3S (Lichee Pi Zero) An example to show how to blink LED in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2593,6 +2593,10 @@ build kernel 4.10.15</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/v3s/asm_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/v3s/asm_led.htm">
+  LED</a><br>
 <br><br><br><br>
 
 <div id="a33_vstar"></div>
