(ARM Cortex-A7) V3S (Lichee Pi Zero) An example to show how to get input value from button in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2597,6 +2597,10 @@ build kernel 4.10.15</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/v3s/asm_led.htm">
   LED</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/v3s/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="a33_vstar"></div>
