--- a/mcu.htm
+++ b/mcu.htm
@@ -124,7 +124,7 @@
   <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (Lichee Pi Zero)"/></a>
   <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
   <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
-  <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
+  <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi M1)"/></a>
   <a href="#pb"><img src="img/photos/pb.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) OSD3358"/></a>
   <a href="#cm3354"><img src="img/photos/cm3354.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) AM3354"/></a>
   <a href="#bbgw"><img src="img/photos/bbgw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) AM3358"/></a>
@@ -2633,16 +2633,12 @@ Build sunxi-tools</a><br>
 
 <div id="nanopi-m1"></div>
 <h3><img src="img/photos/nanopi-m1.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> H3</h3>
+<b>(ARM Cortex-A7)</b> H3 (NanoPi M1)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/h3/build_all.htm">
-Build All</a><br>
-
-&lowast;
-<a href="mcu/h3-m1/flash_image.htm">
-Flash Image(SDCard)</a><br>
+<a href="mcu/h3-m1/sch.htm">
+電路圖</a><br>
 <br><br><br><br>
 
 <div id="pb"></div>
