--- a/mcu.htm
+++ b/mcu.htm
@@ -2639,6 +2639,10 @@ Build sunxi-tools</a><br>
 &lowast;
 <a href="mcu/h3-m1/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="mcu/h3-m1/layout.htm">
+Layout</a><br>
 <br><br><br><br>
 
 <div id="pb"></div>
