(ARM Cortex-A7) H3 (NanoPi NEO) Added pin image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -123,7 +123,7 @@
   <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3 (MangoPi MQ-R)"/></a>
   <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (Lichee Pi Zero)"/></a>
   <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
-  <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3"/></a>
+  <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi NEO)"/></a>
   <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi M1)"/></a>
   <a href="#pb"><img src="img/photos/pb.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) OSD3358"/></a>
   <a href="#cm3354"><img src="img/photos/cm3354.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) AM3354"/></a>
@@ -2615,20 +2615,12 @@ Build All</a><br>
 
 <div id="nanopi-neo"></div>
 <h3><img src="img/photos/nanopi-neo.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> H3</h3>
+<b>(ARM Cortex-A7)</b> H3 (NanoPi NEO)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/h3/build_all.htm">
-Build All</a><br>
-
-&lowast;
-<a href="mcu/h3/build_sunxi-tools.htm">
-Build sunxi-tools</a><br>
-
-&lowast;
-<a href="mcu/h3/patch_gen_check_code.htm">
-解決無法在x86編譯的問題</a>
+<a href="mcu/h3/pin.htm">
+接腳</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
