--- a/mcu/h3/pin.htm
+++ b/mcu/h3/pin.htm
@@ -44,40 +44,16 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>H3</h3>
-<p><b>Build All</b></p>
+<h3>(ARM Cortex-A7) H3 (NanoPi NEO)</h3>
+<p><b>接腳</b></p>
 <hr size="1">
 <p>
-步驟如下：
+參考資訊：<br>
+1. <a href="https://wiki.friendlyelec.com/wiki/index.php/NanoPi_NEO">nanopi neo</a><br><br>
+
+如下：<br>
+<img src="pin/1.jpg" class="maxSize">
 </p>
-<pre>
-$ sudo apt-get install gawk git gnupg flex bison gperf build-essential zip curl libc6-dev libncurses5-dev:i386 x11proto-core-dev libx11-dev:i386 libreadline6-dev:i386 libgl1-mesa-glx:i386 libgl1-mesa-dev g++-multilib mingw32 tofrodos python-markdown libxml2-utils xsltproc zlib1g-dev:i386 u-boot-tools
-$ git clone https://github.com/friendlyarm/h3_lichee.git lichee
-$ cd lichee
-$ ./build.sh -p sun8iw7p1 -b nanopi-h3 -m clean
-$ ./build.sh -p sun8iw7p1 -b nanopi-h3 -m uboot
-$ ./build.sh -p sun8iw7p1 -b nanopi-h3 -m kernel
-  buildroot/scripts/mkcmd.sh: line 831: mkfs.ext4: command not found
-
-$ vim buildroot/scripts/mkcmd.sh +831
-  sudo mkfs.ext4 rootfs.ext4 -F &gt;/dev/null
-
-$ ./build.sh -p sun8iw7p1 -b nanopi-h3
-
-$ cp -fv ./tools/pack/chips/sun8iw7p1/configs/dolphin-p1/sys_config.fex out/sun8iw7p1/linux/common/sys_config.fex
-$ cp -fv ./tools/pack/chips/sun8iw7p1/bin/boot0_sdcard_sun8iw7p1.bin out/sun8iw7p1/linux/common/boot0_sdcard.fex
-$ unix2dos out/sun8iw7p1/linux/common/sys_config.fex
-$ ./tools/pack/pctools/linux/mod_update/script out/sun8iw7p1/linux/common/sys_config.fex
-$ fex2bin out/sun8iw7p1/linux/common/sys_config.fex out/sun8iw7p1/linux/common/sys_config.bin
-$ ./tools/pack/pctools/linux/mod_update/update_boot0 out/sun8iw7p1/linux/common/boot0_sdcard.fex out/sun8iw7p1/linux/common/sys_config.bin SDMMC_CARD
-
-$ cp -fv ./tools/pack/chips/sun8iw7p1/bin/u-boot-sun8iw7p1.bin out/sun8iw7p1/linux/common/u-boot.fex
-$ ./tools/pack/pctools/linux/mod_update/update_uboot out/sun8iw7p1/linux/common/u-boot.fex out/sun8iw7p1/linux/common/sys_config.bin
-
-$ cp out/sun8iw7p1/linux/common/boot.img /media/xxx/boot/boot.img
-$ sudo dd if=out/sun8iw7p1/linux/common/boot0_sdcard.fex of=/dev/sdx bs=1k seek=8
-$ sudo dd if=out/sun8iw7p1/linux/common/u-boot.fex of=/dev/sdx bs=1k seek=16400
-</pre><br>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
