(ARM Cortex-A7) H3 (NanoPi NEO) Added schematic image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2621,6 +2621,10 @@ Build All</a><br>
 &lowast;
 <a href="mcu/h3/pin.htm">
 接腳</a><br>
+
+&lowast;
+<a href="mcu/h3/sch.htm">
+電路圖</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
