(ARM Cortex-A7) H3 (NanoPi NEO) Added layout image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2625,6 +2625,10 @@ Build All</a><br>
 &lowast;
 <a href="mcu/h3/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="mcu/h3/layout.htm">
+Layout</a><br>
 <br><br><br><br>
 
 <div id="nanopi-m1"></div>
