(ARM Cortex-A7) H3 (NanoPi M1) Added pin image.

--- a/mcu/h3-m1/pin.htm
+++ b/mcu/h3-m1/pin.htm
@@ -45,25 +45,14 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>(ARM Cortex-A7) H3 (NanoPi M1)</h3>
-<p><b>電路圖</b></p>
+<p><b>接腳</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
 1. <a href="https://wiki.friendlyelec.com/wiki/index.php/NanoPi_M1">nanopi m1</a><br><br>
 
 如下：<br>
-<img src="sch/1.jpg" class="maxSize"><br>
-<img src="sch/2.jpg" class="maxSize"><br>
-<img src="sch/3.jpg" class="maxSize"><br>
-<img src="sch/4.jpg" class="maxSize"><br>
-<img src="sch/5.jpg" class="maxSize"><br>
-<img src="sch/6.jpg" class="maxSize"><br>
-<img src="sch/7.jpg" class="maxSize"><br>
-<img src="sch/8.jpg" class="maxSize"><br>
-<img src="sch/9.jpg" class="maxSize"><br>
-<img src="sch/10.jpg" class="maxSize"><br>
-<img src="sch/11.jpg" class="maxSize"><br>
-<img src="sch/12.jpg" class="maxSize">
+<img src="pin/1.jpg" class="maxSize">
 </p>
 
 <p>
