--- a/mcu.htm
+++ b/mcu.htm
@@ -2637,6 +2637,10 @@ Layout</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/h3-m1/pin.htm">
+接腳</a><br>
+
+&lowast;
 <a href="mcu/h3-m1/sch.htm">
 電路圖</a><br>
 
