--- a/mcu.htm
+++ b/mcu.htm
@@ -2647,6 +2647,13 @@ Layout</a><br>
 &lowast;
 <a href="mcu/h3-m1/layout.htm">
 Layout</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/h3-m1/asm_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="pb"></div>
