(ARM Cortex-A7) H3 (NanoPi M1) An example to show how to get input value from GPIO_L in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -122,9 +122,9 @@
   <a href="#2g-iot"><img src="img/photos/2g-iot.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A5) RDA8810PL"/></a>
   <a href="#t113-s3"><img src="img/photos/t113-s3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) T113-S3 (MangoPi MQ-R)"/></a>
   <a href="#lichee-zero"><img src="img/photos/lichee-zero.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) V3S (Lichee Pi Zero)"/></a>
-  <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
-  <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi NEO)"/></a>
   <a href="#nanopi-m1"><img src="img/photos/nanopi-m1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi M1)"/></a>
+  <a href="#nanopi-neo"><img src="img/photos/nanopi-neo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) H3 (NanoPi NEO)"/></a>
+  <a href="#a33_vstar"><img src="img/photos/a33_vstar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A7) A33"/></a>
   <a href="#pb"><img src="img/photos/pb.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) OSD3358"/></a>
   <a href="#cm3354"><img src="img/photos/cm3354.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) AM3354"/></a>
   <a href="#bbgw"><img src="img/photos/bbgw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A8) AM3358"/></a>
@@ -2603,14 +2603,41 @@ build kernel 4.10.15</a><br>
   Button</a><br>
 <br><br><br><br>
 
-<div id="a33_vstar"></div>
-<h3><img src="img/photos/a33_vstar.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> A33</h3>
+<div id="nanopi-m1"></div>
+<h3><img src="img/photos/nanopi-m1.jpg" class="floatLeft"/>
+<b>(ARM Cortex-A7)</b> H3 (NanoPi M1)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/a33/build_all.htm">
-Build All</a><br>
+<a href="mcu/h3-m1/pin.htm">
+接腳</a><br>
+
+&lowast;
+<a href="mcu/h3-m1/sch.htm">
+電路圖</a><br>
+
+&lowast;
+<a href="mcu/h3-m1/block.htm">
+方塊圖</a><br>
+
+&lowast;
+<a href="mcu/h3-m1/layout.htm">
+Layout</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="mcu/h3-m1/asm_setup.htm">
+  開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/h3-m1/asm_led.htm">
+  LED</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/h3-m1/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="nanopi-neo"></div>
@@ -2631,33 +2658,14 @@ Build All</a><br>
 Layout</a><br>
 <br><br><br><br>
 
-<div id="nanopi-m1"></div>
-<h3><img src="img/photos/nanopi-m1.jpg" class="floatLeft"/>
-<b>(ARM Cortex-A7)</b> H3 (NanoPi M1)</h3>
+<div id="a33_vstar"></div>
+<h3><img src="img/photos/a33_vstar.jpg" class="floatLeft"/>
+<b>(ARM Cortex-A7)</b> A33</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/h3-m1/pin.htm">
-接腳</a><br>
-
-&lowast;
-<a href="mcu/h3-m1/sch.htm">
-電路圖</a><br>
-
-&lowast;
-<a href="mcu/h3-m1/layout.htm">
-Layout</a><br>
-
-&oplus;
-<b>Assembly</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="mcu/h3-m1/asm_setup.htm">
-  開發環境</a><br>
-  
-  &emsp;&emsp;&lowast;
-  <a href="mcu/h3-m1/asm_led.htm">
-  LED</a><br>
+<a href="mcu/a33/build_all.htm">
+Build All</a><br>
 <br><br><br><br>
 
 <div id="pb"></div>
