--- a/mcu.htm
+++ b/mcu.htm
@@ -2624,6 +2624,10 @@ build kernel 4.10.15</a><br>
 <a href="mcu/h3-m1/layout.htm">
 Layout</a><br>
 
+&lowast;
+<a href="mcu/h3-m1/r_gpio.htm">
+如何初始化R_GPIO</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
