--- a/umpc/pocketchip/fix_usb.htm
+++ b/umpc/pocketchip/fix_usb.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Pocekt C.H.I.P.</h3>
+<h3>Pocket C.H.I.P.</h3>
 <p><b>解決"usb_bulk_send() ERROR -7: Operation timed out"問題</b></p>
 <hr size="1">
 <p>
