--- a/umpc/pocketchip/screen.htm
+++ b/umpc/pocketchip/screen.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Pocekt C.H.I.P.</h3>
+<h3>Pocket C.H.I.P.</h3>
 <p><b>可視角</b></p>
 <hr size="1">
 <p>
