Pocket C.H.I.P. Added schematic images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1883,6 +1883,10 @@ Pocket C.H.I.P.</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/pocketchip/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="umpc/pocketchip/screen.htm">
 可視角</a><br>
 
