--- a/program.htm
+++ b/program.htm
@@ -1818,6 +1818,10 @@ LeetCode</h3>
   &emsp;&emsp;&lowast;
   <a href="program/leetcode/rust_148.htm">
   148. Sort List</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/rust_sort_an_array.htm">
+  Sort an Array</a><br>
 <br><br><br><br>
 
 </p>
